als/lims/browser/stickers/ALS.css
@page {
    size: 44mm 34mm;
    margin: 0mm 0mm 0mm 0mm;
    padding: 0mm 0mm 0mm 0mm;
}

* {
    margin: 0mm 0mm 0mm 0mm;
    padding: 0mm 0mm 0mm 0mm;
}

.sticker {
    font-family: Helvetica, Arial;
    font-size: 6pt;
    padding: 1mm;
    width: 44mm;
    height: 34mm;
}

.outer {
    width: 44mm;
    text-align: center;
}

.barcode {
    width: 42mm !important;
    padding:0 1mm 0 0;
}
.barcode object {
    width: 42mm !important;
}

.sticker table {
    border-collapse: collapse;
    margin: 1px 1px 1px 1px;
    width: 44mm;
}

td {
    text-align: center;
}

.small-font {
    font-size: 8pt;
}
.large-font {
    font-size: 9pt;
}

